fix: updated home page texts, custom scrollbar colors, focus on room field directly

--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@
   text-align: center;
   color: var(--font-color);
   font-family: 'Poppins', sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 300;
   line-height: normal;
   letter-spacing: 1px;
